--- a/feature-home-ui/src/main/res/layout/fragment_home.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home.xml
@@ -41,8 +41,7 @@
                             android:text="@string/app_name"
                             android:textColor="@android:color/black"
                             android:textSize="16sp"
-                            android:textStyle="bold"
-                            tools:text="Sleepork" />
+                            android:textStyle="bold" />
 
                         <EditText
                             android:id="@+id/searchEditText"
