--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -4,7 +4,6 @@
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,35 +11,43 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/titleTextView"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@android:color/white"
-            android:gravity="center_vertical"
-            android:padding="16dp"
-            android:text="@string/AddNewFilter"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:text="@string/AddNewFilter"
+            android:id="@+id/filterTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <ImageView
             android:id="@+id/filterCloseImageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_margin="16dp"
-            android:background="?attr/selectableItemBackground"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_close"
-            app:layout_constraintBottom_toBottomOf="@id/titleTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/titleTextView" />
+            app:layout_constraintBottom_toBottomOf="@id/filterTitleTextView"
+            app:layout_constraintTop_toTopOf="@id/filterTitleTextView"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <View
-            android:id="@+id/titleDividerView"
+        <EditText
+            android:id="@+id/filterEditText"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorDivider"
-            app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:hint="@string/EnterFilter"
+            android:inputType="text|textNoSuggestions"
+            android:paddingStart="16dp"
+            android:background="@drawable/custom_edittext_selector"
+            android:paddingTop="10dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="10dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toBottomOf="@id/filterCloseImageView" />
 
         <TextView
             android:id="@+id/descriptionTextView"
@@ -49,33 +56,19 @@
             android:layout_margin="16dp"
             android:text="@string/FilterDescription"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/titleDividerView" />
-
-        <EditText
-            android:id="@+id/filterEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@drawable/custom_edittext_selector"
-            android:hint="@string/EnterFilter"
-            android:inputType="text|textNoSuggestions"
-            android:paddingStart="16dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="10dp"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />
-
-        <Button
-            android:id="@+id/filterAddButton"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/colorAccent"
-            android:text="@string/Add"
             app:layout_constraintTop_toBottomOf="@id/filterEditText" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/filterAddButton"
+            app:cornerRadius="8dp"
+            app:iconGravity="textStart"
+            app:icon="@drawable/ic_add"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_margin="16dp"
+            android:backgroundTint="?colorAccent"
+            android:text="@string/Add"
+            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />
 
         <View
             android:layout_width="match_parent"
