--- a/resources/src/main/res/drawable/custom_edittext_selected.xml
+++ b/resources/src/main/res/drawable/custom_edittext_selected.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@android:color/white"/>
-    <stroke android:width="1dp" android:color="@color/colorAccent" />
+    <stroke android:width="1dp" android:color="?colorAccent" />
     <corners
         android:bottomRightRadius="8dp"
         android:bottomLeftRadius="8dp"
