--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -10,28 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:textStyle="bold"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:text="@string/AddNewFilter"
-            android:id="@+id/filterTitleTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <ImageView
-            android:id="@+id/filterCloseImageView"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_close"
-            app:layout_constraintBottom_toBottomOf="@id/filterTitleTextView"
-            app:layout_constraintTop_toTopOf="@id/filterTitleTextView"
-            app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:alpha="0.3"
+            android:id="@+id/filterBottomSheetView"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/bottom_sheet_view"
+            android:layout_width="64dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="4dp"/>
 
         <EditText
             android:id="@+id/filterEditText"
@@ -47,7 +34,7 @@
             android:paddingBottom="10dp"
             android:singleLine="true"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/filterCloseImageView" />
+            app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView" />
 
         <TextView
             android:id="@+id/descriptionTextView"
