--- a/resources/src/main/res/values/colors.xml
+++ b/resources/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorBlueGray">#546e7a</color>
-    <color name="colorDivider">#E0E0E0</color>
+    <color name="colorGray">#E0E0E0</color>
+    <color name="colorGrayDark">#1F1F1F</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhiteSecondary">#f8f8f8</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorBlackSecondary">#0E0E0E</color>
 </resources>
