--- a/feature-home-ui/src/main/res/layout/cell_filter.xml
+++ b/feature-home-ui/src/main/res/layout/cell_filter.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:textColor="@android:color/black"
+        android:textColor="?attr/colorTextBold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
