--- a/feature-home-ui/src/main/res/layout/fragment_home_details.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home_details.xml
@@ -11,10 +11,8 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:stateListAnimator="@drawable/appbar_elevation"
-        android:theme="@style/Toolbar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        android:background="?colorPrimaryDark"
+        android:stateListAnimator="@drawable/appbar_elevation">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -103,7 +101,7 @@
                     android:id="@+id/alarmSwitch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/white"
+                    android:background="?attr/colorPrimaryDark"
                     android:padding="16dp"
                     android:text="@string/TurnOnAlarm"
                     android:textSize="16sp" />
@@ -134,7 +132,7 @@
                         android:id="@+id/filterSwitch"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/white"
+                        android:background="?attr/colorPrimaryDark"
                         android:padding="16dp"
                         android:text="@string/TurnOnFilter"
                         android:textSize="16sp" />
