--- a/feature-onboarding-ui/src/main/res/layout/fragment_onboarding.xml
+++ b/feature-onboarding-ui/src/main/res/layout/fragment_onboarding.xml
@@ -3,5 +3,6 @@
     android:id="@+id/viewPager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     android:orientation="vertical"
     android:overScrollMode="never" />
