--- a/resources/src/main/res/drawable/custom_edittext_normal.xml
+++ b/resources/src/main/res/drawable/custom_edittext_normal.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@android:color/white"/>
-    <stroke android:width="1dp" android:color="@color/colorDivider" />
+    <stroke android:width="1dp" android:color="?attr/colorDivider" />
     <corners
         android:bottomRightRadius="8dp"
         android:bottomLeftRadius="8dp"
