update pager indicator, update ui, refactor search, complete notification listener

--- a/feature-home-ui/src/main/res/layout/fragment_home.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home.xml
@@ -64,7 +64,7 @@
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="4dp"
                         app:srcCompat="@drawable/ic_search"
-                        android:tint="?attr/colorPrimary"/>
+                        android:tint="?attr/colorTextBold"/>
 
                     <ProgressBar
                         android:id="@+id/searchProgressBar"
