--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -20,6 +20,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="4dp"/>
 
+        <TextView
+            android:textStyle="bold"
+            android:textColor="?attr/colorTextBold"
+            android:layout_margin="16dp"
+            android:textSize="18sp"
+            android:text="@string/AddNewFilter"
+            android:id="@+id/titleTextView"
+            app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <EditText
             android:id="@+id/filterEditText"
             android:layout_width="match_parent"
@@ -34,7 +45,7 @@
             android:paddingBottom="10dp"
             android:singleLine="true"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView" />
+            app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
         <TextView
             android:id="@+id/descriptionTextView"
@@ -44,6 +55,13 @@
             android:text="@string/FilterDescription"
             android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@id/filterEditText" />
+
+        <View
+            android:id="@+id/dividerView"
+            app:layout_constraintBottom_toBottomOf="@id/filterAddButton"
+            app:layout_constraintTop_toTopOf="@id/descriptionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/filterAddButton"
@@ -55,7 +73,7 @@
             android:layout_margin="16dp"
             android:backgroundTint="?colorAccent"
             android:text="@string/Add"
-            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />
+            app:layout_constraintTop_toBottomOf="@id/dividerView" />
 
         <View
             android:layout_width="match_parent"
