--- a/core-ui/src/main/res/values-v23/styles.xml
+++ b/core-ui/src/main/res/values-v23/styles.xml
@@ -5,9 +5,13 @@
         <item name="colorPrimary">@color/colorWhite</item>
         <item name="colorPrimaryDark">@color/colorWhiteSecondary</item>
         <item name="colorAccent">@color/colorBlueGray</item>
+        <item name="colorError">@color/colorPinkRed</item>
         <item name="colorTextBold">@color/colorBlack</item>
         <item name="colorDivider">@color/colorGray</item>
-        <item name="android:statusBarColor">@color/colorWhiteSecondary</item>
+
+        <item name="android:statusBarColor">@color/colorWhite</item>
+        <item name="android:windowBackground">@color/colorWhite</item>
+        <item name="android:colorBackground">@color/colorWhite</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
