--- a/core-ui/src/main/res/drawable/bottom_sheet.xml
+++ b/core-ui/src/main/res/drawable/bottom_sheet.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white" />
+    <solid android:color="?attr/colorBackground" />
     <corners
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp" />
-    <padding android:top="16dp"/>
+        android:topLeftRadius="@dimen/default_radius"
+        android:topRightRadius="@dimen/default_radius" />
+    <padding android:top="@dimen/default_margin"/>
 </shape>
