--- a/core-ui/src/main/res/values/attrs.xml
+++ b/core-ui/src/main/res/values/attrs.xml
@@ -3,6 +3,8 @@
     <attr name="colorText" format="color" />
     <attr name="colorTextBold" format="color" />
     <attr name="colorDivider" format="color" />
+    <attr name="colorBackground" format="color" />
+    <attr name="colorBackgroundVariant" format="color" />
 
     <declare-styleable name="PagerIndicator">
         <attr name="activeColor" format="color" />
