--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -1,78 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/colorBackground"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <View
-            android:alpha="0.3"
             android:id="@+id/filterBottomSheetView"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="@dimen/bottom_sheet_bottom_view_width"
+            android:layout_height="4dp"
+            android:alpha="0.3"
             android:background="@drawable/bottom_sheet_view"
-            android:layout_width="64dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_height="4dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:textStyle="bold"
-            android:textColor="?attr/colorTextBold"
-            android:layout_margin="16dp"
-            android:textSize="18sp"
-            android:text="@string/AddNewFilter"
             android:id="@+id/titleTextView"
-            app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView"
+            style="@style/AppTheme.Text.Title.H3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_margin"
+            android:text="@string/AddNewFilter"
+            app:layout_constraintTop_toBottomOf="@id/filterBottomSheetView" />
 
         <EditText
             android:id="@+id/filterEditText"
+            style="@style/AppTheme.Text.Description.H3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/default_margin"
+            android:background="@drawable/custom_edittext_selector"
             android:hint="@string/EnterFilter"
             android:inputType="text|textNoSuggestions"
-            android:paddingStart="16dp"
-            android:background="@drawable/custom_edittext_selector"
-            android:paddingTop="10dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="10dp"
+            android:paddingStart="@dimen/default_margin"
+            android:paddingTop="@dimen/edit_text_padding"
+            android:paddingEnd="@dimen/default_margin"
+            android:paddingBottom="@dimen/edit_text_padding"
             android:singleLine="true"
-            android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
         <TextView
             android:id="@+id/descriptionTextView"
+            style="@style/AppTheme.Text.Description.H4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/default_margin"
             android:text="@string/FilterDescription"
-            android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@id/filterEditText" />
 
         <View
             android:id="@+id/dividerView"
-            app:layout_constraintBottom_toBottomOf="@id/filterAddButton"
-            app:layout_constraintTop_toTopOf="@id/descriptionTextView"
             android:layout_width="match_parent"
-            android:layout_height="64dp"/>
+            android:layout_height="@dimen/bottom_sheet_bottom_space"
+            app:layout_constraintBottom_toBottomOf="@id/filterAddButton"
+            app:layout_constraintTop_toTopOf="@id/descriptionTextView" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/filterAddButton"
-            app:cornerRadius="8dp"
-            app:iconGravity="textStart"
-            app:icon="@drawable/ic_add"
+            style="@style/AppTheme.MaterialButton"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_margin="16dp"
-            android:backgroundTint="?colorAccent"
+            android:layout_height="@dimen/material_button_height"
             android:text="@string/Add"
+            app:icon="@drawable/ic_add"
+            app:iconGravity="textStart"
             app:layout_constraintTop_toBottomOf="@id/dividerView" />
 
         <View
@@ -80,6 +73,4 @@
             android:layout_height="16dp"
             app:layout_constraintTop_toBottomOf="@id/filterAddButton" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
