--- a/feature-home-ui/src/main/res/layout/fragment_home.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimaryDark"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -28,13 +27,11 @@
 
                     <TextView
                         android:id="@+id/titleTextView"
+                        style="@style/AppTheme.Text.Title.H4"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:text="@string/app_name"
-                        android:textColor="?attr/colorTextBold"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:text="@string/app_name" />
 
                     <EditText
                         android:id="@+id/searchEditText"
@@ -42,29 +39,28 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
                         android:background="@null"
-                        android:hint="Поиск"
+                        android:hint="@android:string/search_go"
                         android:inputType="text|textNoSuggestions"
                         android:singleLine="true"
-                        android:textColor="?attr/colorTextBold"
-                        android:textColorHint="?attr/colorTextBold"
                         android:visibility="gone" />
 
                 </FrameLayout>
 
                 <FrameLayout
+                    android:id="@+id/searchFrameLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp">
+                    android:layout_margin="12dp"
+                    android:background="?attr/selectableItemBackgroundBorderless">
 
                     <ImageView
                         android:id="@+id/searchImageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="4dp"
-                        app:srcCompat="@drawable/ic_search"
-                        android:tint="?attr/colorTextBold"/>
+                        android:tint="?attr/colorTextBold"
+                        app:srcCompat="@drawable/ic_search" />
 
                     <ProgressBar
                         android:id="@+id/searchProgressBar"
@@ -101,12 +97,11 @@
 
     <TextView
         android:id="@+id/emptyTextView"
+        style="@style/AppTheme.Text.Description.H3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="32dp"
         android:text="@string/ApplicationNotFound"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
