--- a/feature-home-ui/src/main/res/layout/fragment_home_details.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home_details.xml
@@ -4,14 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?colorPrimaryDark"
         android:stateListAnimator="@drawable/appbar_elevation">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -30,10 +28,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="vertical"
-                    android:paddingStart="16dp"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="16dp"
-                    android:paddingBottom="8dp">
+                    android:paddingStart="@dimen/default_margin"
+                    android:paddingTop="@dimen/small_margin"
+                    android:paddingEnd="@dimen/default_margin"
+                    android:paddingBottom="@dimen/small_margin">
 
                     <ImageView
                         android:id="@+id/iconImageView"
@@ -43,20 +41,18 @@
 
                     <TextView
                         android:id="@+id/titleTextView"
+                        style="@style/AppTheme.Text.Title.H3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:layout_marginTop="@dimen/small_margin" />
 
                     <TextView
                         android:id="@+id/descriptionTextView"
+                        style="@style/AppTheme.Text.Description.H4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textColor="@android:color/tab_indicator_text"
                         tools:text="com.package.name" />
 
                 </LinearLayout>
@@ -86,25 +82,26 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/AppTheme.Text.Description.H4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/default_margin"
                 android:text="@string/MainSection"
                 android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="?attr/colorPrimaryDark"
                 app:cardElevation="2dp">
 
                 <Switch
                     android:id="@+id/alarmSwitch"
+                    style="@style/AppTheme.Text.Description.H3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?attr/colorPrimaryDark"
-                    android:padding="16dp"
-                    android:text="@string/TurnOnAlarm"
-                    android:textSize="16sp" />
+                    android:padding="@dimen/default_margin"
+                    android:text="@string/TurnOnAlarm" />
 
             </androidx.cardview.widget.CardView>
 
@@ -117,25 +114,26 @@
                 tools:visibility="visible">
 
                 <TextView
+                    style="@style/AppTheme.Text.Description.H4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_margin="@dimen/default_margin"
                     android:text="@string/OptionalSection"
                     android:textStyle="bold" />
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:cardBackgroundColor="?attr/colorPrimaryDark"
                     app:cardElevation="2dp">
 
                     <Switch
                         android:id="@+id/filterSwitch"
+                        style="@style/AppTheme.Text.Description.H3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="?attr/colorPrimaryDark"
-                        android:padding="16dp"
-                        android:text="@string/TurnOnFilter"
-                        android:textSize="16sp" />
+                        android:padding="@dimen/default_margin"
+                        android:text="@string/TurnOnFilter" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -171,17 +169,17 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        app:backgroundTint="?colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginEnd="@dimen/default_margin"
         android:layout_marginBottom="62dp"
         android:src="@drawable/ic_add"
-        app:tint="@android:color/white"
         android:visibility="invisible"
+        app:backgroundTint="?attr/colorAccent"
+        app:tint="?attr/colorPrimary"
         tools:visibility="visible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
