--- a/core-ui/src/main/res/layout/fragment_problem_bottom_sheet_dialog.xml
+++ b/core-ui/src/main/res/layout/fragment_problem_bottom_sheet_dialog.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_margin"
-        android:text="@string/onboarding_description_second_link" />
+        android:text="@string/problem_service" />
 
     <TextView
         android:id="@+id/descriptionTextView"
