--- a/core-ui/src/main/res/values-v23/styles.xml
+++ b/core-ui/src/main/res/values-v23/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorError">@color/colorPinkRed</item>
         <item name="colorTextBold">@color/colorBlack</item>
         <item name="colorDivider">@color/colorGray</item>
+        <item name="colorBackground">@color/colorWhite</item>
         <item name="colorBackgroundVariant">@color/colorWhiteSecondary</item>
 
         <item name="android:statusBarColor">@color/colorWhite</item>
