--- a/core-ui/src/main/res/values/dimens.xml
+++ b/core-ui/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="default_radius">8dp</dimen>
 
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="very_small_margin">8dp</dimen>
 
     <dimen name="material_button_height">56dp</dimen>
     <dimen name="icon_cell_size">36dp</dimen>
