--- a/feature-home-ui/src/main/res/layout/fragment_home_details.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home_details.xml
@@ -86,7 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_margin"
-                android:text="@string/MainSection"
+                android:text="@string/main_section"
                 android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
@@ -101,7 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/default_margin"
-                    android:text="@string/TurnOnAlarm" />
+                    android:text="@string/turn_on_alarm" />
 
             </androidx.cardview.widget.CardView>
 
@@ -118,7 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/default_margin"
-                    android:text="@string/OptionalSection"
+                    android:text="@string/optional_section"
                     android:textStyle="bold" />
 
                 <androidx.cardview.widget.CardView
@@ -133,7 +133,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/default_margin"
-                        android:text="@string/TurnOnFilter" />
+                        android:text="@string/turn_on_filter" />
 
                 </androidx.cardview.widget.CardView>
 
