--- a/feature-home-ui/src/main/res/layout/fragment_home.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_home.xml
@@ -12,68 +12,10 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <FrameLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/titleTextView"
-                        style="@style/AppTheme.Text.Title.H4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="@string/app_name" />
-
-                    <EditText
-                        android:id="@+id/searchEditText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:background="@null"
-                        android:hint="@android:string/search_go"
-                        android:inputType="text|textNoSuggestions"
-                        android:singleLine="true"
-                        android:visibility="gone" />
-
-                </FrameLayout>
-
-                <FrameLayout
-                    android:id="@+id/searchFrameLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:background="?attr/selectableItemBackgroundBorderless">
-
-                    <ImageView
-                        android:id="@+id/searchImageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="4dp"
-                        android:tint="?attr/colorTextBold"
-                        app:srcCompat="@drawable/ic_search" />
-
-                    <ProgressBar
-                        android:id="@+id/searchProgressBar"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_gravity="center"
-                        android:visibility="gone" />
-
-                </FrameLayout>
-
-            </LinearLayout>
-
-        </androidx.appcompat.widget.Toolbar>
+            android:layout_height="wrap_content"
+            app:titleTextAppearance="@style/AppTheme.Text.Title.H4" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
