complete search, fix divider

--- a/core-ui/src/main/res/values-v23/styles.xml
+++ b/core-ui/src/main/res/values-v23/styles.xml
@@ -19,5 +19,7 @@
 
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
         <item name="bottomSheetStyle">@style/BottomSheetDialogTheme</item>
+
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 </resources>
