start settings fragment and fix search

--- a/core-ui/src/main/res/values-v23/styles.xml
+++ b/core-ui/src/main/res/values-v23/styles.xml
@@ -20,6 +20,11 @@
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
         <item name="bottomSheetStyle">@style/BottomSheetDialogTheme</item>
 
+        <item name="android:alertDialogTheme">@style/AppTheme.Dialog</item>
+        <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
+        <item name="android:dialogTheme">@style/AppTheme.Dialog</item>
+        <item name="dialogTheme">@style/AppTheme.Dialog</item>
+
         <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 </resources>
