--- a/core-ui/src/main/res/values/styles.xml
+++ b/core-ui/src/main/res/values/styles.xml
@@ -8,15 +8,41 @@
         <item name="colorTextBold">@color/colorBlack</item>
         <item name="colorDivider">@color/colorGray</item>
         <item name="colorBackground">@color/colorWhite</item>
-        <item name="colorBackgroundVariant">@color/colorWhiteSecondary</item>
+        <item name="colorBackgroundVariant">@color/colorWhite</item>
 
         <item name="android:textColorSecondary">@color/colorBlack</item>
         <item name="android:statusBarColor">@color/colorWhite</item>
         <item name="android:windowBackground">@color/colorWhite</item>
         <item name="android:colorBackground">@color/colorWhite</item>
 
-        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
-        <item name="bottomSheetStyle">@style/BottomSheetDialogTheme</item>
+        <item name="bottomSheetDialogTheme">@style/AppTheme.BottomSheetDialogTheme</item>
+        <item name="bottomSheetStyle">@style/AppTheme.BottomSheetDialogTheme</item>
+
+        <item name="android:alertDialogTheme">@style/AppTheme.Dialog</item>
+        <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
+        <item name="android:dialogTheme">@style/AppTheme.Dialog</item>
+        <item name="dialogTheme">@style/AppTheme.Dialog</item>
+
+        <item name="android:windowSoftInputMode">adjustNothing</item>
+    </style>
+
+    <style name="AppTheme.Dark" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="colorPrimary">@color/colorBlack</item>
+        <item name="colorPrimaryDark">@color/colorBlackSecondary</item>
+        <item name="colorAccent">@color/colorBlueGray</item>
+        <item name="colorError">@color/colorPinkRed</item>
+        <item name="colorTextBold">@color/colorWhite</item>
+        <item name="colorDivider">@color/colorGrayDark</item>
+        <item name="colorBackground">@color/colorBlack</item>
+        <item name="colorBackgroundVariant">@color/colorBlackSecondary</item>
+
+        <item name="android:textColorSecondary">@color/colorWhite</item>
+        <item name="android:statusBarColor">@color/colorBlackSecondary</item>
+        <item name="android:windowBackground">@color/colorBlack</item>
+        <item name="android:colorBackground">@color/colorBlack</item>
+
+        <item name="bottomSheetDialogTheme">@style/AppTheme.BottomSheetDialogTheme</item>
+        <item name="bottomSheetStyle">@style/AppTheme.BottomSheetDialogTheme</item>
 
         <item name="android:alertDialogTheme">@style/AppTheme.Dialog</item>
         <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
@@ -83,13 +109,13 @@
         <item name="android:background">@drawable/bottom_sheet</item>
     </style>
 
-    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+    <style name="AppTheme.BottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
-        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="android:windowSoftInputMode">adjustResize|stateVisible</item>
         <item name="bottomSheetStyle">@style/BottomSheet</item>
     </style>
 
-    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
+    <style name="AppTheme.BottomSheetDialogTheme" parent="AppTheme.BottomSheetDialog">
         <item name="colorPrimary">@color/colorBlueGray</item>
         <item name="colorPrimaryDark">@color/colorBlueGray</item>
         <item name="colorAccent">@color/colorBlueGray</item>
