--- a/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
+++ b/feature-home-ui/src/main/res/layout/fragment_filter_add_bottom_sheet.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/colorBackground"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="?attr/colorBackground">
 
         <View
             android:id="@+id/filterBottomSheetView"
